kubernetes/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nextjs-service
spec:
    type: NodePort
    selector:
        app: next
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
