kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-ingress
    annotations:
        # If the class annotation is not specified it defaults to "gce".
        kubernetes.io/ingress.class: "gce"
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: nextjs-service
                            port:
                                number: 3000
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: web-service
                            port:
                                number: 80
